<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.DangKi"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDangKi"
        android:textSize="60dp"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:layout_marginBottom="50dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:padding="20dp"
        android:hint="@string/edtTenDangNhap"
        android:layout_marginBottom="10dp"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:padding="20dp"
        android:hint="@string/edtTen"
        android:layout_marginBottom="10dp"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:padding="20dp"
        android:hint="@string/edtMatKhau"
        android:layout_marginBottom="10dp"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:padding="20dp"
        android:hint="@string/edtXacNhan"
        android:layout_marginBottom="10dp"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:padding="20dp"
        android:hint="@string/edtSDT"
        android:layout_marginBottom="10dp"></EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtShipper"
            android:layout_marginRight="90dp">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtThuKho">
        </RadioButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDangnhap"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_btn_bg"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnĐăngki"
            android:background="@drawable/round_btn_bg"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"></Button>
    </LinearLayout>

</LinearLayout>