<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDangNhap"
        android:textSize="60dp"
        android:gravity="center"
        android:textColor="@color/colorBlue">
    </TextView>
    <ImageView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/shipper"
        android:layout_marginTop="20dp"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="30dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtShipper"
            android:layout_marginRight="90dp">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtThuKho">
        </RadioButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/round_border">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:src="@drawable/ic_baseline_person_24"></ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/edtUser"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/round_border">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:src="@drawable/lock"></ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/edtPass"></EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDangnhap"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_btn_bg"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnĐăngki"
            android:background="@drawable/round_btn_bg"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"></Button>
    </LinearLayout>

</LinearLayout>